test-cases/valid/reject/bad_argument_type.ul
void main() {
    foo('c'); // Argument type should be int
}

void foo(int bar) {
    print bar;
}
